--- a/SimpleLinearRegressionUsingOLS.ipynb
+++ b/SimpleLinearRegressionUsingOLS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple linear regression - exercise"
+    "# Simple linear regression using OLS"
    ]
   },
   {
